fixed minor issue on med screen sizes where text was overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,6 @@ button:active {
  grid-column: 1;
  grid-row: 1;
  align-self: center;
- margin-top: 120px;
  margin-left: 20px;
  font-size: 20px;
 }
@@ -193,6 +192,10 @@ button:active {
  grid-row: 1;
  align-self: center;
  margin: 30px 0 0 20px;
+}
+.location-description {
+ grid-row: 1;
+ grid-column: 1;
 }
 .daily-temp,
 .daily-maxmin,
